--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -134,6 +134,10 @@ elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
+elseif(CONFIG_BOARD_TYPE_JC1060P470)
+    set(BOARD_TYPE "jc1060p470")
+elseif(CONFIG_BOARD_TYPE_JC1060P4A1)
+    set(BOARD_TYPE "jc1060p4a1")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
